--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <br />
 <br />
 <div align="center">
-<h1 style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:9966666;">IzzyCasey.com</h1>
+<h1 style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#996666;">IzzyCasey.com</h1>
+<br />
+<br />
+<br />
+<p style="font-family:Arial, Helvetica, sans-serif; font-size:30px; color:#996666;">:)</p>
 </div>
 </body>
 </html>
