--- a/index.html
+++ b/index.html
@@ -1,24 +1,68 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>IzzyCasey.com</title>
-</head>
-
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" href="data:image/png;base64,">
+<title>Izzy Casey</title>
+<style>
+	body{
+		margin:1em auto;
+		max-width:40em;
+		padding:0 .62em;
+		font:1.0em/1.4 serif;
+	}
+	h1,h2,h3 {
+		line-height:1;
+	}
+	@media print{
+		body{
+			max-width:none
+		}
+	}
+</style>
 <body>
 
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<div align="center">
-<h1 style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#996666;">IzzyCasey.com</h1>
-<br />
-<br />
-<br />
-<p style="font-family:Arial, Helvetica, sans-serif; font-size:30px; color:#996666;">:)</p>
+<div align="center"><h1><em>Izzy Casey</em></h1>
+<p style="font-size:10px;">izzycasey95@gmail.com</p>
 </div>
+<h2>PUBLICATIONS</h2>
+<br />
+<h3><u>POEMS</u></h3>
+
+<p><em>Black Warrior Review</em>, “Elegy,” Print, (forthcoming)</p>
+<p><em>Prelude</em>, “To: Iz (No Subject),” Print, (forthcoming)</p>
+<p><em>Bennington Review</em>, “I’m Piss Witch,” Print, (forthcoming)</p>
+<p><em>The Volta</em>, “Estranged Mother,” “No Action Required,” & “Walking Sticks,” <a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />Online</a>, 2020</p>
+<p><em>BOAAT</em>, “What Kindergarten and Partial Hospitalization Have in Common,” <a href="https://www.boaatpress.com/what-kindergarten" />Online</a>, 2020</p>
+<p><em>Prelude</em>, “Eating Disorder,” <a href="https://preludemag.com/posts/eating-disorder/" />Online</a>, 2020</p>
+<p><em>Gulf Coast</em>, “King Midas,” & “No Appreciation for the Work of the Hand,” Print, 2019</p>
+<ul>
+<li>Best New Poets 2020, (Nomination), Gulf Coast, TX: 2020</li>
+<li>The Pushcart Prize, (Nomination), Gulf Coast, TX: 2019</li>
+</ul>
+<p><em>Hobar</em>t, “This Kind of Alone Will Help Me,” & “The Moonfish,” <a href="https://www.hobartpulp.com/web_features/two-poems--115" />Online</a>, 2017</p>
+<p><em>NY Tyrant</em>, “Queen of the Little Stinkers,” “Haha,” & “Eight,” <a href="http://magazine.nytyrant.com/three-poems-3/" />Online</a>, 2017</p>
+
+<br /><br />
+
+<h3><u>PROSE:</u></h3>
+<p><em>Little Village</em>, “Garth Greenwell in conversation with Novuyo Rosa Thsuma,” <a href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Online</a>, 2020</p>
+<p><em>Corriere della Sera</em>, “We, the Pony Mafia, Nod Our Heads in Unison,” Print, 2018</p>
+
+<br /><br />
+
+<h3><u>INTERVIEWS:</u></h3>
+<p><em>The Iowa Review</em>, “An Interview Under the Influence starring David Trinidad,” Print, 2020</p>
+<p><em>The Iowa Review</em>, “Interview with Susan Steinberg,” <a href="https://iowareview.org/blog/interview-susan-steinberg" />Online</a>, 2019</p>
+<p><em>The Iowa Review</em>, “Interview with Bruna Dantas Lobato,” <a href="https://iowareview.org/blog/interview-bruna-dantas-lobato" />Online</a>, 2019</p>
+<p><em>Bennington Review</em>, “Samuel Amadon in Conversation with Bennington Review,” <a href="http://www.benningtonreview.org/amadoninterview" />Online</a>, 2016</p>
+
+<br /><br />
+
+<h3><u>EDITORIAL PROJECTS:</u></h3>
+<p><em>The Iowa Review</em>, “The Iowa Review’s National Poetry Month 2019,” <a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2019" />Online</a>, 2019</p>
+<p><em>The Iowa Review</em>, “The Iowa Review’s National Poetry Month 2018,” <a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2018" />Online</a>, 2018</p>
+
+<br /><br /><hr />
 </body>
 </html>
