--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p><em>The Iowa Review</em>, “An Interview Under the Influence starring David Trinidad,” Print, 2020</p>
 <p><em>The Iowa Review</em>, “Interview with Susan Steinberg,” <a href="https://iowareview.org/blog/interview-susan-steinberg" />Online</a>, 2019</p>
 <p><em>The Iowa Review</em>, “Interview with Bruna Dantas Lobato,” <a href="https://iowareview.org/blog/interview-bruna-dantas-lobato" />Online</a>, 2019</p>
-<p><em>Bennington Review</em>, “Samuel Amadon in Conversation with Bennington Review,” <a href="http://www.benningtonreview.org/amadoninterview" />Online</a>, 2016</p>
+<p><em>Bennington Review</em>, “Samuel Amadon in Conversation with <em>Bennington Review</em>,” <a href="http://www.benningtonreview.org/amadoninterview" />Online</a>, 2016</p>
 
 <br /><br />
 
