--- a/index.html
+++ b/index.html
@@ -36,18 +36,22 @@
 <p><em>BOAAT</em>, “What Kindergarten and Partial Hospitalization Have in Common,” <a href="https://www.boaatpress.com/what-kindergarten" />Online</a>, 2020</p>
 <p><em>Prelude</em>, “Eating Disorder,” <a href="https://preludemag.com/posts/eating-disorder/" />Online</a>, 2020</p>
 <p><em>Gulf Coast</em>, “King Midas,” & “No Appreciation for the Work of the Hand,” Print, 2019</p>
-<ul>
-<li>Best New Poets 2020, (Nomination), Gulf Coast, TX: 2020</li>
-<li>The Pushcart Prize, (Nomination), Gulf Coast, TX: 2019</li>
-</ul>
-<p><em>Hobar</em>t, “This Kind of Alone Will Help Me,” & “The Moonfish,” <a href="https://www.hobartpulp.com/web_features/two-poems--115" />Online</a>, 2017</p>
+<p><em>Hobart</em>, “This Kind of Alone Will Help Me,” & “The Moonfish,” <a href="https://www.hobartpulp.com/web_features/two-poems--115" />Online</a>, 2017</p>
 <p><em>NY Tyrant</em>, “Queen of the Little Stinkers,” “Haha,” & “Eight,” <a href="http://magazine.nytyrant.com/three-poems-3/" />Online</a>, 2017</p>
 
 <br /><br />
 
-<h3><u>PROSE:</u></h3>
-<p><em>Little Village</em>, “Garth Greenwell in conversation with Novuyo Rosa Thsuma,” <a href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Online</a>, 2020</p>
+<h3><u>SHORT STORIES:</u></h3>
+
 <p><em>Corriere della Sera</em>, “We, the Pony Mafia, Nod Our Heads in Unison,” Print, 2018</p>
+
+<br /><br />
+
+<h3><u>ARTICLES</u></h3>
+
+<p><em>YourTango</em>, "Who Is Stephanie Buttermore & Everything To Know About Her All-In Weight Gain Journey ," <a href="https://www.yourtango.com/2020336405/who-stephanie-buttermore-everything-know-about-her-all-in-journey"/> Online</a>,2020    </p>
+<p><em>Little Village</em>, “Garth Greenwell in conversation with Novuyo Rosa Thsuma,” <a href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Online</a>, 2020</p>
+
 
 <br /><br />
 
