--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 </style>
 <body>
 
-<div align="center"><h1><em>Izzy Casey</em></h1>
+<div align="center"><h1><strong>IZZY CASEY<strong/></h1>
 <p style="font-size:10px;">izzycasey95@gmail.com</p>
 </div>
-<h2>PUBLICATIONS</h2>
+
 <br />
-<h3><u>POEMS</u></h3>
+<h3><strong>POEMS</strong></h3>
 
 <p><em>Black Warrior Review</em>, “Elegy,” Print, (forthcoming)</p>
 <p><em>Prelude</em>, “To: Iz (No Subject),” Print, (forthcoming)</p>
@@ -41,13 +41,13 @@
 
 <br /><br />
 
-<h3><u>SHORT STORIES:</u></h3>
+<h3><strong>SHORT STORIES</strong></h3>
 
 <p><em>Corriere della Sera</em>, “We, the Pony Mafia, Nod Our Heads in Unison,” Print, 2018</p>
 
 <br /><br />
 
-<h3><u>ARTICLES</u></h3>
+<h3><strong>ARTICLES</strong></h3>
 
 <p><em>YourTango</em>, "Who Is Stephanie Buttermore & Everything To Know About Her All-In Weight Gain Journey ," <a href="https://www.yourtango.com/2020336405/who-stephanie-buttermore-everything-know-about-her-all-in-journey"/> Online</a>,2020    </p>
 <p><em>Little Village</em>, “Garth Greenwell in conversation with Novuyo Rosa Thsuma,” <a href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Online</a>, 2020</p>
@@ -55,7 +55,7 @@
 
 <br /><br />
 
-<h3><u>INTERVIEWS:</u></h3>
+<h3><strong>INTERVIEWS:</strong></h3>
 <p><em>The Iowa Review</em>, “An Interview Under the Influence starring David Trinidad,” Print, 2020</p>
 <p><em>The Iowa Review</em>, “Interview with Susan Steinberg,” <a href="https://iowareview.org/blog/interview-susan-steinberg" />Online</a>, 2019</p>
 <p><em>The Iowa Review</em>, “Interview with Bruna Dantas Lobato,” <a href="https://iowareview.org/blog/interview-bruna-dantas-lobato" />Online</a>, 2019</p>
@@ -63,7 +63,7 @@
 
 <br /><br />
 
-<h3><u>EDITORIAL PROJECTS:</u></h3>
+<h3><strong>EDITORIAL PROJECTS:</strong></h3>
 <p><em>The Iowa Review</em>, “The Iowa Review’s National Poetry Month 2019,” <a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2019" />Online</a>, 2019</p>
 <p><em>The Iowa Review</em>, “The Iowa Review’s National Poetry Month 2018,” <a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2018" />Online</a>, 2018</p>
 
