--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 		padding:0 .62em;
 		font:1.0em/1.4 serif;
 	}
-	h1,h2,h3 {
+	h1 {
+		line-height:1;
+		font-size: 25px;
+	
+	}
+	
+	
+	
+	
+	
+	h2,h3 {
 		line-height:1;
 	}
 	@media print{
