--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
 		padding:0 .62em;
 		font:1.0em/1.4 serif;
 	}
-	h1 {
-		line-height:1;
-		font-size: 25px;
-	
-	}
-	
-	
-	
-	
-	
-	h2,h3 {
+	h1,h2,h3 {
 		line-height:1;
 	}
 	@media print{
@@ -32,7 +22,7 @@
 </style>
 <body>
 
-<div align="center"><h1><strong>IZZY CASEY<strong/></h1>
+<div align="center"><h1 style="font-size: 40px;"><strong>IZZY CASEY<strong/></h1>
 <p style="font-size:10px;">izzycasey95@gmail.com</p>
 </div>
 
