--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		max-width:40em;
 		padding:0 .62em;
 		font:1.0em/1.4 serif;
+	
 	}
 	h1,h2,h3 {
 		line-height:1;
@@ -20,9 +21,9 @@
 		}
 	}
 </style>
-<body>
+<body style="background-color: #42FF05">
 
-<div align="center"><h1 style="font-size: 100px;"><strong>IZZY CASEY<strong/></h1>
+<div align="center"><h1 style="font-size: 80px;"><strong>IZZY CASEY<strong/></h1>
 
 </div>
 
