--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		max-width:40em;
 		padding:0 .62em;
 		font:1.0em/1.4 serif;
-		color: #FF0EE2;
+		color: #42FF05;
 	}
 	h1,h2,h3 {
 		line-height:1;
@@ -21,7 +21,7 @@
 		}
 	}
 </style>
-<body style="background-color: #42FF05">
+<body style="background-color: 000000">
 
 <div align="center"><h1 style="font-size: 80px;"><strong>IZZY CASEY<strong/></h1>
 
