--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		}
 	}
 </style>
-<body style="background-color: 000000">
+<body style="background-color: #000000">
 
 <div align="center"><h1 style="font-size: 80px;"><strong>IZZY CASEY<strong/></h1>
 
