--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 <br />
 <h3><strong>POEMS</strong></h3>
 
-<p><em>Black Warrior Review</em>, “Elegy,” Print, (forthcoming)</p>
-<p><em>Prelude</em>, “To: Iz (No Subject),” Print, (forthcoming)</p>
-<p><em>Bennington Review</em>, “I’m Piss Witch,” Print, (forthcoming)</p>
-<p><em>The Volta</em>, “Estranged Mother,” “No Action Required,” & “Walking Sticks,” <a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />Online</a>, 2020</p>
-<p><em>BOAAT</em>, “What Kindergarten and Partial Hospitalization Have in Common,” <a href="https://www.boaatpress.com/what-kindergarten" />Online</a>, 2020</p>
-<p><em>Prelude</em>, “Eating Disorder,” <a href="https://preludemag.com/posts/eating-disorder/" />Online</a>, 2020</p>
-<p><em>Gulf Coast</em>, “King Midas,” & “No Appreciation for the Work of the Hand,” Print, 2019</p>
-<p><em>Hobart</em>, “This Kind of Alone Will Help Me,” & “The Moonfish,” <a href="https://www.hobartpulp.com/web_features/two-poems--115" />Online</a>, 2017</p>
-<p><em>NY Tyrant</em>, “Queen of the Little Stinkers,” “Haha,” & “Eight,” <a href="http://magazine.nytyrant.com/three-poems-3/" />Online</a>, 2017</p>
+<p>"ELEGY," <em>Black Warrior Review</em></p>
+<p>"To: Iz (No Subject)," <em>Prelude</em></p>
+<p>"I'm Piss Witch," <em>Bennington Review</em></p>
+<p>"Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks," <em><a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></em></p>
+<p>"What Kindergarten and Partial Hospitalization Have in Common," <em><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</em></a></p>
+<p>"Eating Disorder," <em><a href="https://preludemag.com/posts/eating-disorder/" />Prelude</a></em></p>
+<p>"King Midas," & "No Appreciation for the Work of the Hand," <em>Gulf Coast</em></p>
+<p>"This Kind of Alone Will Help Me," & "The Moonfish," <em><a href="https://www.hobartpulp.com/web_features/two-poems--115" />Hobart</a></em></p>
+<p>"Queen of the Little Stinkers," "Haha," & "Eight," <em><a href="http://magazine.nytyrant.com/three-poems-3/" />NY Tyrant</a></em>
 
 <br /><br />
 
