--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 <br />
 <h3><strong>POEMS</strong></h3>
 
-<p>"ELEGY," <em>Black Warrior Review</em></p>
-<p>"To: Iz (No Subject)," <em>Prelude</em></p>
+	<p><strong>Black Warrior Review</strong>: "Elegy"</p>
+	<p><strong>Prelude</strong>: "To: Iz (No Subject)"</p>
+	
+	
 <p>"I'm Piss Witch," <em>Bennington Review</em></p>
 <p>"Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks," <em><a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></em></p>
 <p>"What Kindergarten and Partial Hospitalization Have in Common," <em><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</em></a></p>
