--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
 
 	<p><strong>Black Warrior Review</strong>: "Elegy"</p>
 	<p><strong>Prelude</strong>: "To: Iz (No Subject)"</p>
-	
-	
-<p>"I'm Piss Witch," <em>Bennington Review</em></p>
-<p>"Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks," <em><a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></em></p>
-<p>"What Kindergarten and Partial Hospitalization Have in Common," <em><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</em></a></p>
-<p>"Eating Disorder," <em><a href="https://preludemag.com/posts/eating-disorder/" />Prelude</a></em></p>
-<p>"King Midas," & "No Appreciation for the Work of the Hand," <em>Gulf Coast</em></p>
-<p>"This Kind of Alone Will Help Me," & "The Moonfish," <em><a href="https://www.hobartpulp.com/web_features/two-poems--115" />Hobart</a></em></p>
-<p>"Queen of the Little Stinkers," "Haha," & "Eight," <em><a href="http://magazine.nytyrant.com/three-poems-3/" />NY Tyrant</a></em>
+	<p><strong>Bennington Review</strong>: "I'm Piss Witch"</p>
+	<p><strong><a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></strong>: "Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks"</p>
+	<p><strong><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</a></strong>: What Kindergarten and Partial Hospitalization Have In Common</p>
+	<p><strong><a href="https://preludemag.com/posts/eating-disorder/" />Prelude </a></strong>: "Eating Disorder"</p>
+	<p><strong>Gulf Coast: A Journal of Literature and Fine Arts</strong>: "King Midas" & "No Appreciation of the Work of the Hand"</p>
+	<p><strong><a href="https://www.hobartpulp.com/web_features/two-poems--115" />Hobart</a></strong>: "This Kind of Alone Will Help Me," & "The Moonfish"</p>
+	<p><strong><a href="http://magazine.nytyrant.com/three-poems-3/" />NY Tyrant</a></strong></p>: "Queen of the Little Stinkers," "Haha," "Eight."
 
 <br /><br />
 
