--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<p><strong>Black Warrior Review</strong>: "Elegy"</p>
 	<p><strong>Prelude</strong>: "To: Iz (No Subject)"</p>
 	<p><strong>Bennington Review</strong>: "I'm Piss Witch"</p>
-	<p><strong><a href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></strong>: "Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks"</p>
+	<p><strong><a style="text-decoration: none;" href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></strong>: "Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks"</p>
 	<p><strong><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</a></strong>: What Kindergarten and Partial Hospitalization Have In Common</p>
 	<p><strong><a href="https://preludemag.com/posts/eating-disorder/" />Prelude </a></strong>: "Eating Disorder"</p>
 	<p><strong>Gulf Coast: A Journal of Literature and Fine Arts</strong>: "King Midas" & "No Appreciation of the Work of the Hand"</p>
