--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		max-width:40em;
 		padding:0 .62em;
 		font:1.0em/1.4 serif;
-		color: #42FF05;
+		color: #000000;
 	}
 	h1,h2,h3 {
 		line-height:1;
@@ -21,7 +21,7 @@
 		}
 	}
 </style>
-<body style="background-color: #000000">
+<body style="background-color: #FFFFFF">
 
 <div align="center"><h1 style="font-size: 80px;"><strong>IZZY CASEY<strong/></h1>
 
@@ -34,37 +34,37 @@
 	<p><strong>Prelude</strong>: "To: Iz (No Subject)"</p>
 	<p><strong>Bennington Review</strong>: "I'm Piss Witch"</p>
 	<p><strong><a style="text-decoration: none;" href="http://www.thevolta.org/heirapparent-issue49-icasey.html" />The Volta</a></strong>: "Estranged Mother," "RE: No Action Required (The Abridged Version)," & "Walking-Sticks"</p>
-	<p><strong><a href="https://www.boaatpress.com/what-kindergarten" />BOAAT</a></strong>: What Kindergarten and Partial Hospitalization Have In Common</p>
-	<p><strong><a href="https://preludemag.com/posts/eating-disorder/" />Prelude </a></strong>: "Eating Disorder"</p>
+	<p><strong><a style="text-decoration: none;" href="https://www.boaatpress.com/what-kindergarten" />BOAAT</a></strong>: What Kindergarten and Partial Hospitalization Have In Common</p>
+	<p><strong><a style="text-decoration: none;" href="https://preludemag.com/posts/eating-disorder/" />Prelude </a></strong>: "Eating Disorder"</p>
 	<p><strong>Gulf Coast: A Journal of Literature and Fine Arts</strong>: "King Midas" & "No Appreciation of the Work of the Hand"</p>
-	<p><strong><a href="https://www.hobartpulp.com/web_features/two-poems--115" />Hobart</a></strong>: "This Kind of Alone Will Help Me," & "The Moonfish"</p>
-	<p><strong><a href="http://magazine.nytyrant.com/three-poems-3/" />NY Tyrant</a></strong>: "Queen of the Little Stinkers," "Haha," "Eight."
+	<p><strong><a style="text-decoration: none;" href="https://www.hobartpulp.com/web_features/two-poems--115" />Hobart</a></strong>: "This Kind of Alone Will Help Me," & "The Moonfish"</p>
+	<p><strong><a style="text-decoration: none;" href="http://magazine.nytyrant.com/three-poems-3/" />NY Tyrant</a></strong>: "Queen of the Little Stinkers," "Haha," "Eight."
 
 <br /><br />
 
 <h3><strong>PROSE</strong></h3>
 
-<p><strong><a href="https://www.yourtango.com/2020337560/don-blankenship-businessman-running-president"/>YourTango</a></strong>: "Facts About Don Blankenship, The Third-Party Presidential Candidate Who Claims He's 'Trumpier Than Trump'"</p>
-<p><strong><a href="https://www.yourtango.com/2020336718/how-wake-up-rested-when-youre-not-morning-person"/>YourTango</a></strong>: "How To Wake Up Rested When You're Not A Morning Person"</p>
-<p><strong><a href="https://www.yourtango.com/2020337227/who-ashley-tisdale-husband-christopher-french"/>YourTango</a></strong>: "Who Is Ashley Tisdale's Husband? Fun Facts About Christopher French — And Their New Baby!"</p>
-<p><strong><a href="https://www.yourtango.com/2020336405/who-stephanie-buttermore-everything-know-about-her-all-in-journey"/>YourTango</a></strong>:"Who Is Stephanie Buttermore & Everything To Know About Her All-In Weight Gain Journey"</p>
-<p><strong><a href="https://www.yourtango.com/2020336498/how-use-old-clothes-make-new-outfits-without-spending-dime"/>YourTango</a></strong>: "How To Use Old Clothes To Make New Outfits Without Spending A Dime"</p>
-<p><strong><a href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Little Village</a></strong>: “Garth Greenwell in conversation with Novuyo Rosa Thsuma,”</p>
+<p><strong><a style="text-decoration: none;" href="https://www.yourtango.com/2020337560/don-blankenship-businessman-running-president"/>YourTango</a></strong>: "Facts About Don Blankenship, The Third-Party Presidential Candidate Who Claims He's 'Trumpier Than Trump'"</p>
+<p><strong><a style="text-decoration: none;" href="https://www.yourtango.com/2020336718/how-wake-up-rested-when-youre-not-morning-person"/>YourTango</a></strong>: "How To Wake Up Rested When You're Not A Morning Person"</p>
+<p><strong><a style="text-decoration: none;" href="https://www.yourtango.com/2020337227/who-ashley-tisdale-husband-christopher-french"/>YourTango</a></strong>: "Who Is Ashley Tisdale's Husband? Fun Facts About Christopher French — And Their New Baby!"</p>
+<p><strong><a style="text-decoration: none;" href="https://www.yourtango.com/2020336405/who-stephanie-buttermore-everything-know-about-her-all-in-journey"/>YourTango</a></strong>:"Who Is Stephanie Buttermore & Everything To Know About Her All-In Weight Gain Journey"</p>
+<p><strong><a style="text-decoration: none;" href="https://www.yourtango.com/2020336498/how-use-old-clothes-make-new-outfits-without-spending-dime"/>YourTango</a></strong>: "How To Use Old Clothes To Make New Outfits Without Spending A Dime"</p>
+<p><strong><a style="text-decoration: none;" href="https://littlevillagemag.com/garth-greenwell-novuyo-rosa-tshuma-prairie-lights/" />Little Village</a></strong>: “Garth Greenwell in conversation with Novuyo Rosa Thsuma,”</p>
 <p><strong>Corriere della Sera</strong>: “We, the Pony Mafia, Nod Our Heads in Unison,”</p>
 
 <br /><br />
 
 <h3><strong>INTERVIEWS:</strong></h3>
 <p><strong>The Iowa Review</strong>: "David Trinidad: An Interview Under the Influence"</p>
-<p><strong> <a href="https://iowareview.org/blog/interview-susan-steinberg" />The Iowa Review</a></strong>: "Interview with Susan Steinberg"</p>
-<p><strong><a href="https://iowareview.org/blog/interview-bruna-dantas-lobato" />The Iowa Review</a></strong>: “Interview with Bruna Dantas Lobato”</p>
-<p><strong><a href="http://www.benningtonreview.org/amadoninterview" />Bennington Review</a></strong>: “Samuel Amadon in Conversation with Bennington Review”</p>
+<p><strong> <a style="text-decoration: none;" href="https://iowareview.org/blog/interview-susan-steinberg" />The Iowa Review</a></strong>: "Interview with Susan Steinberg"</p>
+<p><strong><a style="text-decoration: none;" href="https://iowareview.org/blog/interview-bruna-dantas-lobato" />The Iowa Review</a></strong>: “Interview with Bruna Dantas Lobato”</p>
+<p><strong><a style="text-decoration: none;" href="http://www.benningtonreview.org/amadoninterview" />Bennington Review</a></strong>: “Samuel Amadon in Conversation with Bennington Review”</p>
 
 <br /><br />
 
 <h3><strong>EDITORIAL PROJECTS:</strong></h3>
-<p><strong><a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2019" />The Iowa Review</a></strong>: “The Iowa Review’s National Poetry Month 2019”</p>
-<p><strong> <a href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2018" />The Iowa Review</a></strong>: “The Iowa Review’s National Poetry Month 2018”
+<p><strong><a style="text-decoration: none;" href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2019" />The Iowa Review</a></strong>: “The Iowa Review’s National Poetry Month 2019”</p>
+<p><strong> <a style="text-decoration: none;" href="https://iowareview.org/blog/iowa-review-celebrates-national-poetry-month-2018" />The Iowa Review</a></strong>: “The Iowa Review’s National Poetry Month 2018”
 
 <br /><br /><hr />
 </body>
